Fix project tools overflow bug

--- a/styles_v2.css
+++ b/styles_v2.css
@@ -152,7 +152,7 @@ html {
 .project-tools {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 90%;
     list-style: none;
     padding: 0px;
     position: absolute;
